fix: change contrast for filled out form elements

--- a/singolo3.css
+++ b/singolo3.css
@@ -122,7 +122,7 @@ ul {
   padding: 12px 15px;
   line-height: 14px;
   font-size: 12px;
-  color: #f48c8f;
+  color: #f0d8d9;
   background-color: #d5554f;
   border: none;
   font-weight: 400;
@@ -148,6 +148,7 @@ ul {
 .quote-from input:focus,
 .quote-from textarea:focus {
   background-color: #f0d8d9;
+  color: #2d2f39;
 }
 
 .quote-info {
